--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Node express mysql (sequilze) api",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "scripts": {    
+    "start": "SET NODE_ENV=dev && node index.js",
+    "test": "mocha --timeout 10000"    
   },
   "author": "Hein Htet Aung",
   "license": "ISC",
@@ -16,5 +17,10 @@
     "express-validator": "^6.14.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.12.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.1.3"
   }
 }
