--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {    
     "start": "SET NODE_ENV=dev && node index.js",
-    "test": "mocha --timeout 10000"    
+    "test": "mocha --timeout 10000",
+    "postinstall": "cd frontend && npm install && npm run build"  
   },
   "author": "Hein Htet Aung",
   "license": "ISC",
